hphp/hack/test/typecheck/aktuple/foreach_error.php.exp
File "foreach_error.php", line 12, characters 14-15:
Invalid argument (Typing[4110])
  File "foreach_error.php", line 16, characters 19-21:
  Expected `int`
  File "foreach_error.php", line 9, characters 18-21:
  But got `num`
  File "hackarray.hhi", line 52, characters 75-75:
    via this generic `T`
  File "hackarray.hhi", line 22, characters 35-36:
    via this generic `Tv`
  File "interfaces.hhi", line 115, characters 23-24:
    via this generic `Tv`
  File "interfaces.hhi", line 92, characters 48-49:
    via this generic `Tv`
